# c

./: .gitignore  bases.py  calc.py  commit_updates.sh  diff.sh  floating_format.py  linalg_utils.py  newton.py  pdfqual.sh  planet_game.py  plank.py  pull.sh  repetend_len.py  rref.py  stats.py  units.py
bbp/: Cargo.toml
bbp/benches/: bbp.rs
bbp/src/: lib.rs  main.rs
complex_newton/: Cargo.toml
complex_newton/src/: lib.rs  main.rs
eigenzero/: Cargo.toml
eigenzero/src/: main.rs
eigenzeros/: Cargo.toml
eigenzeros/src/: lib.rs  main.rs
eulers_method/src/: main.rs
german_tank/: Cargo.toml
german_tank/src/: main.rs
lin_regression/: Cargo.toml
lin_regression/.cargo/: config.toml
lin_regression/src/: lib.rs  main.rs
mat_regression/: Cargo.toml
mat_regression/src/: lib.rs  main.rs
polyzero/: Cargo.toml
polyzero/src/: lib.rs  main.rs
quad/: Cargo.toml  docs.md
quad/src/: main.rs
repetend_len/: Cargo.toml
repetend_len/src/: lib.rs  main.rs
simstats/: Cargo.toml
simstats/src/: main.rs
uno/: Cargo.toml
uno/src/: card.rs  deck.rs  game.rs  hand.rs  key_buffer.rs  main.rs  pile.rs  screen.rs  utils.rs
