[package]
name = "eigenzero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aberth = "0.0.4"
nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["intel-mkl"] }
